@@ -17,6 +17,7 @@ AM_PROG_LIBTOOL
 LIBTOOL="$LIBTOOL --silent"
 AC_PROG_CC
 AC_PROG_INSTALL
+AM_ACLOCAL_INCLUDE m4
 PKG_PROG_PKG_CONFIG
 
 PKG_CHECK_MODULES(pygtk, pygtk-2.0)
